# fastapi-app-demo

./: .env.example  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  lint-and-test.yml
app/: config.py  main.py
app/api/: dependencies.py
app/api/models/: content.py  decrypt.py  device.py  protection_system.py
app/api/routers/: __init__.py  content.py  decrypt.py  device.py  health.py  protection_system.py
app/db/: session.py
app/db/models/: __init__.py  base.py  content.py  device.py  protection_system.py  user.py  user_device.py
app/db/repository/: base.py  content.py  device.py  protection_system.py  user.py
app/routers/: __init__.py
app/services/: __init__.py  encryptor.py
migrations/: env.py
migrations/versions/: 2024-11-25_afccaca472fa_initial_migration.py  2024-11-27_20ff8ac95aed_user_device_association.py  2024-11-27_de7849c6bb8d_user_model.py
tests/: conftest.py
tests/test_api/: test_content.py  test_decrypt.py  test_device.py  test_health.py  test_protection_system.py
tests/test_db/test_repo/: test_users.py
tests/test_services/: test_encryptor.py
