[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Fedir Alifirenko <fedor.alifirenko@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
uvloop = "^0.21.0"
uvicorn = "^0.32.1"
sqlalchemy = {version = "^2.0.36", extras = ["postgresql-asyncpg"]}
pydantic = {version = "^2.10.1", extras = ["mypy"]}
cryptography = "^43.0.3"
alembic = "^1.14.0"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.0"
black = "^24.10.0"
mypy = "^1.13.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"


[tool.taskipy.tasks]
lint = "task lint_flake8 && task lint_isort && task lint_black && task lint_mypy"
lint_isort = "isort app tests --check-only"
lint_flake8 = "flake8 app tests"
lint_black = "black --check app tests"
lint_mypy = "mypy app tests --install-types --non-interactive"

test = "pytest -v --cov-fail-under=80 --cov=app"
format = "task format_isort && task format_black"
format_isort = "isort app tests"
format_black = "black app tests"
ci = "task lint && task test"


[tool.black]
line-length = 110
target-version = ['py312']


[tool.isort]
profile = "black"


[tool.mypy]
plugins = ['pydantic.mypy', 'sqlalchemy.ext.mypy.plugin']
strict_optional = "true"
install_types = "true"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
